--- a/ref.bib
+++ b/ref.bib
@@ -78,7 +78,7 @@
 
 @article{fader2011,
   title={Internal and external green-blue agricultural water footprints of nations, and related water and land savings through trade},
-  author={Fader, Marianela and Gerten, Dieter and Thammer, M and Heinke, J and Lotze-Campen, H and Lucht, Wolfgang and Cramer, Wolfgang},
+  author={Fader, Marianela and Gerten, Dieter and Thammer, M and Heinke, J and Lotze-Campen, Hermann and Lucht, Wolfgang and Cramer, Wolfgang},
   journal={Hydrology and Earth System Sciences},
   volume={15},
   number={5},
@@ -120,7 +120,7 @@
 
 @article{galloway2007,
   title={International trade in meat: The tip of the pork chop},
-  author={Galloway, James N and Burke, Marshall and Bradford, G Eric and Naylor, Rosamond and Falcon, Walter and Chapagain, Ashok K and Gaskell, Joanne C and McCullough, Ellen and Mooney, Harold A and Oleson, Kirsten LL and others},
+  author={Galloway, James N et al},
   journal={AMBIO: A Journal of the Human Environment},
   volume={36},
   number={8},
@@ -130,10 +130,11 @@
   doi={10.1579/0044-7447(2007)36[622:ITIMTT]2.0.CO;2}
 }
 
-@unpublished{gephart2016,
+@article{gephart2016,
   title={Vulnerability to shocks in the global seafood trade network},
-  author={Gephart, Jessica A and Brännströmm Åke and Rovenskaya, Elena and Dieckmann, Ulf and Pace, Michael L},
-  year={in revision}
+  author={Gephart, Jessica A and Brännströmm, Åke and Rovenskaya, Elena and Dieckmann, Ulf and Pace, Michael L},
+  journal={Environmental Research Letters},  
+  year={in press}
 }
 
 @article{godar2015,
@@ -401,7 +402,10 @@ Organization (FAO) of the United Nations},
   author={Tamea, Stefania and Laio, Francesco and Ridolfi, Luca},
   journal={Scientific Reports},
   publisher={Nature Publishing Group},
-  year={in press}
+  volume={6},
+  pages={18803},
+  year={2016},
+  doi={10.1038/srep18803}
 }
 
 @article{weinzettel2013,
